# Issue-Scan

./: .gitignore  README.md  pyproject.toml
docs/: GITHUB_ISSUE_POLLING.md
skills/add-issue-scan-project/: SKILL.md
src/issue_scan/: classifier.py  cli.py  config.py  git_sync.py  github_cli.py  models.py  poller.py  wake.py
