[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "issue-scan"
version = "0.1.0"
description = "GitHub issue polling and wakeup automation for OpenClaw"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "shihua-guo" }
]
dependencies = []

[project.scripts]
issue-scan = "issue_scan.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
